factor out linting into a dedicated action, with auto commit

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,4 +21,4 @@ jobs:
       - uses: compas-dev/compas-actions.build@v3
         with:
           python: ${{ matrix.python }}
-          invoke_lint: true
+#          invoke_lint: true
