--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -1,8 +1,16 @@
-name: Ruff
-on: [ push, pull_request ]
+name: Lint and Commit
+on: [push, pull_request]
+
 jobs:
-  ruff:
+  lint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: chartboost/ruff-action@v1
+    - uses: actions/checkout@v3
+    - uses: actions/setup-python@v2
+    - run: pip install ruff
+    - run: |
+      ruff check .
+      ruff fix .
+    - uses: stefanzweifel/git-auto-commit-action@v4
+      with:
+        commit_message: 'style fixes by ruff'
